fix focus visible footer icon misplacement

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -337,7 +337,7 @@
 			}
 		} 
 		a:focus-visible {
-			bottom: -54px;
+			bottom: -104px;
 			padding: 10px 9px 10px 9px;
 			@media (min-width: $big) {
 				position: absolute;
